--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "2.6.1",
+    "@tanstack/react-query": "5.71.10",
     "axios": "1.8.4",
     "i18next": "24.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "15.4.1",
-    "react-redux": "9.2.0",
     "react-router-dom": "7.4.0",
     "styled-components": "6.1.16"
   },
