--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "15.4.1",
-    "react-router-dom": "7.4.0",
+    "react-router": "^7.6.0",
     "styled-components": "6.1.16"
   },
   "devDependencies": {
