--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "15.4.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
-    "styled-components": "6.1.16"
+    "styled-components": "6.1.16",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
