--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-i18next": "15.4.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
+    "socket.io-client": "^4.8.1",
     "styled-components": "6.1.16",
     "zustand": "^5.0.4"
   },
